contact information added

--- a/AzureMiddayMingle/Views/Home/About.cshtml
+++ b/AzureMiddayMingle/Views/Home/About.cshtml
@@ -1,12 +1,14 @@
 ﻿@{
-    ViewBag.Title = "About us";
+    ViewBag.Title = "";
 }
 
 <h2>@ViewBag.Message</h2>
 
+</br>
 <p>Do you work at a large company? Have you ever wondered, "How can I get to know all of my colleagues?" Welcome to the original profile matching application, where you can network with employees you might not know in your organization based on mutual interests. Select a desired cuisine, and this app will also give you and your match a list of suggested restaurants near your organization.</p>
+</br>
 
-<h2>@ViewBag.Title.</h2>
+<h2>@ViewBag.Title</h2>
 
 <h3><center>Lauren Babcock <span class="label label-default"></span></center></h3>
 </br>
@@ -33,7 +35,7 @@
         <img src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/AAEAAQAAAAAAAAdwAAAAJGJlNTQ5OTMyLWFhMjMtNGViNi05ZGFlLTkyOWJlNmMyY2I4Mg.jpg" class="img-circle" alt="Edit photo" height="400" width="400" />
     </div>
     <div class="col-sm-6">
-        </br> </br> </br> </br> </br> Molly is a Network Security Specialist at Bissell Homecare, INC. She is pursuing a career in IT security and is looking to enhance her knowledge of malware analysis and securing the world of IoT. Molly has a B.S. in Computer and Information Systems Security/Information Assurance from American Military University. She also recently completed a bootcamp through Grand Circus, where she gained expertise in .NET (C#) development in a career-focused setting. Molly loves her position at Bissell and brings tenacity, curiosity and excellence to her work every day. Outside of work, Molly stays active in the security community through events, and local meetups. She enjoys spontaneous adventures with her family, spending time outdoors, and playing with her dog Mae.
+        </br> </br> </br> </br> </br> Molly is a Network Security Specialist at BISSELL. She is pursuing a career in IT security and is looking to enhance her knowledge of web app and IoT security. Molly has a B.S. in Information Systems Security and Cloud Computing from American Military University. She also recently completed a bootcamp through Grand Circus, where she gained expertise in .NET (C#) development in a career-focused setting. Molly loves her position at BISSELL and brings tenacity, curiosity and excellence to her work every day. Outside of work, Molly stays active in the security community through events, and local meetups. She enjoys spontaneous adventures with her partner, spending time outdoors, and playing with her dog Mae.
     </div>
 </div>
 
