--- a/AzureMiddayMingle/Views/Home/Contact.cshtml
+++ b/AzureMiddayMingle/Views/Home/Contact.cshtml
@@ -5,18 +5,17 @@
 <h3>@ViewBag.Message</h3>
 
 <address>
-    Start Garden
+    Start Garden </br>
     40 Pearl St NW #200<br />
     Grand Rapids, MI 49503<br />
-    <abbr title="Email">E:</abbr>
-    hello@startgarden.com
+
 </address>
 
 <address>
-    <strong>Brianna Marshall:</strong>   <a href="mailto:brianna.yael@gmail.com">brianna.yael@gmail.com</a><br />
-    <strong>Jonaca Hudson:</strong> <a href="mailto:Marketing@example.com">jonacalhudson@gmail.com</a><br />
-    <strong>Lauren Babcock:</strong>   <a href="mailto:Support@example.com">laurenbabcock5@gmail.com</a><br />
-    <strong>Molly Guthrie:</strong> <a href="mailto:Marketing@example.com">mollymarieguthrie@gmail.com</a>
+    <strong>Brianna Marshall:</strong>   <a href="mailto:brianna.yael@gmail.com">brianna.yael@gmail.com</a> | <a href="https://www.linkedin.com/in/brianna-yael/">LinkedIn</a> | <a href="https://github.com/brianna-yael">Github</a></br>
+    <strong>Jonaca Hudson:</strong> <a href="mailto:Marketing@example.com">jonacalhudson@gmail.com</a> | <a href="https://www.linkedin.com/in/jonacahudson/">LinkedIn</a> | <a href="https://github.com/Jonaca-hudson">Github</a></br>
+    <strong>Lauren Babcock:</strong>   <a href="mailto:Support@example.com">laurenbabcock5@gmail.com</a> | <a href="https://www.linkedin.com/in/lauren-babcock/">LinkedIn</a> | <a href="https://github.com/LaurenBabcock">Github</a></br>
+    <strong>Molly Guthrie:</strong> <a href="mailto:Marketing@example.com">mollymarieguthrie@gmail.com</a> | <a href="https://www.linkedin.com/in/molly-guthrie/">LinkedIn</a> | <a href="https://github.com/MollyGuthrie">Github</a></br>
 </address>
 
 </br>
