--- a/AzureMiddayMingle/Views/Home/ViewMyProfile.cshtml
+++ b/AzureMiddayMingle/Views/Home/ViewMyProfile.cshtml
@@ -53,7 +53,7 @@
     <div class="card">
         <img src="/w3images/team2.jpg" style="width:100%">
         <h1>@ViewBag.MyName</h1>
-        <p class="title">@ViewBag.MyPosition at @ViewBag.MyCompany</p>
+        <p class="title">@ViewBag.MyPosition @ViewBag.MyCompany</p>
         <p>@ViewBag.MyEmail</p>
         <p class="interest">Interests include @ViewBag.MyInterest</p>
         <p class="food">Favorite cusine type is @ViewBag.MyCuisine</p>
